Fix CSS layout issue with wrapping

--- a/packages/ui/src/css/editorGrid.sass
+++ b/packages/ui/src/css/editorGrid.sass
@@ -26,4 +26,5 @@
       display: block
   .editor-grid-center
     flex: 1 1 auto
+    min-width: 0
 
